--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -34,11 +34,21 @@
 .hero {
 	color: #ffffff;
 	text-align: center;
-	background: linear-gradient(to bottom, $middle-gradient-color 0%, $secondary-brand-color 100%) no-repeat #a05fb7;
+	background: rgb(146,15,20);
+	background: linear-gradient(90deg, rgba(146,15,20,1) 0%, rgba(193,23,30,1) 42%, rgba(129,12,17,1) 100%);
 	padding-top: 50px;
+	height: 100vh;
 
 	p {
 		color: #fff;
+	}
+	&__image-container {
+		width: 50%;
+		margin: 0 auto;
+		img {
+			width: 100%;
+			height: auto;
+		}
 	}
 }
 
